{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 97,
  "lineage": "c8b0e530-1188-5868-b021-95686f53f939",
  "resources": [
    {
      "module": "module.ec2_cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058b1b7fe545997ae",
            "arn": "arn:aws:ec2:eu-west-1:785256694344:instance/i-02cd73a4f362a0744",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02cd73a4f362a0744",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a58b2f88bc556fc9",
            "private_dns": "ip-10-0-1-165.eu-west-1.compute.internal",
            "private_ip": "10.0.1.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b87914b66b03273d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f4ceb27a3f01b03",
            "tags": {
              "Environment": "dev",
              "Name": "vmn-dev-ec2",
              "Owner": "vmn",
              "Terraform": "true",
              "Type": "Linux"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vmn-dev-ec2",
              "Owner": "vmn",
              "Terraform": "true",
              "Type": "Linux"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "vmn-dev-ec2"
            },
            "vpc_security_group_ids": [
              "sg-04107b1d882fed000"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:785256694344:security-group/sg-04107b1d882fed000",
            "description": "Security group for example usage with EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04107b1d882fed000",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All IPV4 ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-20210714145643726000000001",
            "name_prefix": "example-",
            "owner_id": "785256694344",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "MyKey": "Key2Me",
              "Name": "example",
              "Owner": "vmn",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "MyKey": "Key2Me",
              "Name": "example",
              "Owner": "vmn",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb43e91ea2320ebb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-213304056",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04107b1d882fed000",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-472125054",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04107b1d882fed000",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-561257372",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-04107b1d882fed000",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:785256694344:route-table/rtb-0d38fe850f61516d6",
            "id": "rtb-0d38fe850f61516d6",
            "owner_id": "785256694344",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "MyKey": "Key2Me",
              "Name": "my-vpc-private-eu-west-1a",
              "Owner": "vmn",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "MyKey": "Key2Me",
              "Name": "my-vpc-private-eu-west-1a",
              "Owner": "vmn",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bb43e91ea2320ebb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e62455cd703b4fda",
            "route_table_id": "rtb-0d38fe850f61516d6",
            "subnet_id": "subnet-04f4ceb27a3f01b03"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:785256694344:subnet/subnet-04f4ceb27a3f01b03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04f4ceb27a3f01b03",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785256694344",
            "tags": {
              "Environment": "dev",
              "MyKey": "Key2Me",
              "Name": "my-vpc-private-eu-west-1a",
              "Owner": "vmn",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "MyKey": "Key2Me",
              "Name": "my-vpc-private-eu-west-1a",
              "Owner": "vmn",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bb43e91ea2320ebb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:785256694344:vpc/vpc-0bb43e91ea2320ebb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6c4e1368b703270",
            "default_route_table_id": "rtb-00e6a957e3d91e678",
            "default_security_group_id": "sg-0f465732d858fb3e5",
            "dhcp_options_id": "dopt-0fb992f732c95d670",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bb43e91ea2320ebb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00e6a957e3d91e678",
            "owner_id": "785256694344",
            "tags": {
              "Environment": "dev",
              "MyKey": "Key2Me",
              "Name": "my-vpc",
              "Owner": "vmn",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "MyKey": "Key2Me",
              "Name": "my-vpc",
              "Owner": "vmn",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}